clang-ir/tests/snapshots/snapshot_fixtures__fixtures__continue_nested_loops.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/continue_nested_loops.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[4] = ConstArray { ty: Array { element_type: Named("s8i"), size: 4 }, elts: Str("%d\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn sum_grid(%arg0: s32i) -> s32i [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i):
        %22 = alloca s32i, "n", align 4
        %23 = alloca s32i, "__retval", align 4
        %24 = alloca s32i, "total", align 4
        store %arg0, %22
        %25 = const 0 : s32i
        store %25, %24, align 4
        scope {
                %28 = alloca s32i, "i", align 4
                %29 = const 0 : s32i
                store %29, %28, align 4
                for cond {
                        %52 = load %28 : s32i, align 4
                        %53 = load %22 : s32i, align 4
                        cmp
                        condition %54
                } step {
                        %30 = load %28 : s32i, align 4
                        inc
                        store %31, %28, align 4
                        yield
                } body {
                        scope {
                                scope {
                                        %49 = load %28 : s32i, align 4
                                        %50 = const 2 : s32i
                                        cmp
                                        if %51 {
                                                continue
                                        }
                                        yield
                                }
                                scope {
                                        %32 = alloca s32i, "j", align 4
                                        %33 = const 0 : s32i
                                        store %33, %32, align 4
                                        for cond {
                                                %46 = load %32 : s32i, align 4
                                                %47 = load %22 : s32i, align 4
                                                cmp
                                                condition %48
                                        } step {
                                                %34 = load %32 : s32i, align 4
                                                inc
                                                store %35, %32, align 4
                                                yield
                                        } body {
                                                scope {
                                                        scope {
                                                                %43 = load %32 : s32i, align 4
                                                                %44 = const 3 : s32i
                                                                cmp
                                                                if %45 {
                                                                        continue
                                                                }
                                                                yield
                                                        }
                                                        %36 = load %28 : s32i, align 4
                                                        %37 = const 10 : s32i
                                                        mul
                                                        %39 = load %32 : s32i, align 4
                                                        %40 = add %38, %39 : s32i [nsw]
                                                        %41 = load %24 : s32i, align 4
                                                        %42 = add %41, %40 : s32i [nsw]
                                                        store %42, %24, align 4
                                                        yield
                                                }
                                                yield
                                        }
                                        yield
                                }
                                yield
                        }
                        yield
                }
                yield
        }
        %26 = load %24 : s32i, align 4
        store %26, %23
        %27 = load %23 : s32i
        return %27
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        %2 = get_global @printf : (s8i*, ...) -> s32i*
        %3 = get_global @.str : s8i[4]*
        %4 = cast(array_to_ptrdecay) %3 : s8i*
        %5 = const 5 : s32i
        %6 = call @sum_grid(%5) : s32i [all]
        %7 = call @printf(%4, %6) : s32i [all]
        %8 = get_global @printf : (s8i*, ...) -> s32i*
        %9 = get_global @.str : s8i[4]*
        %10 = cast(array_to_ptrdecay) %9 : s8i*
        %11 = const 1 : s32i
        %12 = call @sum_grid(%11) : s32i [all]
        %13 = call @printf(%10, %12) : s32i [all]
        %14 = get_global @printf : (s8i*, ...) -> s32i*
        %15 = get_global @.str : s8i[4]*
        %16 = cast(array_to_ptrdecay) %15 : s8i*
        %17 = const 0 : s32i
        %18 = call @sum_grid(%17) : s32i [all]
        %19 = call @printf(%16, %18) : s32i [all]
        %20 = const 0 : s32i
        store %20, %0
        %21 = load %0 : s32i
        return %21
}
