clang-ir/tests/snapshots/snapshot_fixtures__fixtures__control_flow_builtin_ops.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/control_flow_builtin_ops.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[13] = "%d %d %d %d\n" [cir_private, default, align 1, dso_local, constant]

fn likely_nonzero(%arg3: s32i) -> s32i [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg3: s32i):
        %50 = alloca s32i, "x", align 4
        %51 = alloca s32i, "__retval", align 4
        store %arg3, %50
        scope {
            %54 = load %50 : s32i, align 4
            %55 = const 0 : s32i
            %56 = cmp ne %54, %55 : bool
            if %56 {
                %57 = load %50 : s32i, align 4
                %58 = const 0 : s32i
                %59 = cmp ne %57, %58 : bool
                assume %59
                %60 = load %50 : s32i, align 4
                %61 = const 10 : s32i
                %62 = add %60, %61 : s32i [nsw]
                store %62, %51
                %63 = load %51 : s32i
                return %63
            }
            yield
        }
        %52 = const -1 : s32i
        store %52, %51
        %53 = load %51 : s32i
        return %53
}
fn assume_true(%arg2: s32i) -> s32i [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg2: s32i):
        %42 = alloca s32i, "x", align 4
        %43 = alloca s32i, "__retval", align 4
        store %arg2, %42
        %44 = const 1 : s32i
        %45 = cast(int_to_bool) %44 : bool
        assume %45
        %46 = load %42 : s32i, align 4
        %47 = const 1 : s32i
        %48 = add %46, %47 : s32i [nsw]
        store %48, %43
        %49 = load %43 : s32i
        return %49
}
fn guarded_trap(%arg1: s32i) -> s32i [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg1: s32i):
        %35 = alloca s32i, "x", align 4
        %36 = alloca s32i, "__retval", align 4
        store %arg1, %35
        scope {
            %39 = load %35 : s32i, align 4
            %40 = const 0 : s32i
            %41 = cmp lt %39, %40 : bool
            if %41 {
                trap
            }
            yield
        }
        %37 = load %35 : s32i, align 4
        store %37, %36
        %38 = load %36 : s32i
        return %38
}
fn guarded_unreachable(%arg0: s32i) -> s32i [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i):
        %26 = alloca s32i, "x", align 4
        %27 = alloca s32i, "__retval", align 4
        store %arg0, %26
        scope {
            %32 = load %26 : s32i, align 4
            %33 = const 0 : s32i
            %34 = cmp lt %32, %33 : bool
            if %34 {
                unreachable
            }
            yield
        }
        %28 = load %26 : s32i, align 4
        %29 = const 2 : s32i
        %30 = mul %28, %29 : s32i [nsw]
        store %30, %27
        %31 = load %27 : s32i
        return %31
}
fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i, "input", align 4
    %2 = alloca s32i, "a", align 4
    %3 = alloca s32i, "b", align 4
    %4 = alloca s32i, "c", align 4
    %5 = alloca s32i, "d", align 4
    %6 = const 0 : s32i
    store %6, %0
    %7 = const 5 : s32i
    store %7, %1, align 4, volatile
    %8 = load %1 : s32i, align 4, volatile
    %9 = call @likely_nonzero(%8) : s32i [all]
    store %9, %2, align 4
    %10 = load %1 : s32i, align 4, volatile
    %11 = call @assume_true(%10) : s32i [all]
    store %11, %3, align 4
    %12 = load %1 : s32i, align 4, volatile
    %13 = call @guarded_trap(%12) : s32i [all]
    store %13, %4, align 4
    %14 = load %1 : s32i, align 4, volatile
    %15 = call @guarded_unreachable(%14) : s32i [all]
    store %15, %5, align 4
    %16 = get_global @printf : ((s8i*, ...) -> s32i)*
    %17 = get_global @.str : s8i[13]*
    %18 = cast(array_to_ptrdecay) %17 : s8i*
    %19 = load %2 : s32i, align 4
    %20 = load %3 : s32i, align 4
    %21 = load %4 : s32i, align 4
    %22 = load %5 : s32i, align 4
    %23 = call @printf(%18, %19, %20, %21, %22) : s32i [all]
    %24 = const 0 : s32i
    store %24, %0
    %25 = load %0 : s32i
    return %25
}
